# explorer-backend

./: .CHAINS.JSON  .env.example  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Chains.yml  README.md  build.rs  generate_code.js
.circleci/: config.yml
.github/workflows/: ci.yml
src/: chain.rs  chains.rs  encoding.rs  events.rs  macros.rs  main.rs  server.rs  sonar-project.properties  state.rs  utils.rs
src/cron_jobs/: all.rs  mod.rs  params.rs  validator.rs
src/data/: chain_data.rs  db.rs  impls.rs  last_ten_blocks.rs  last_ten_txs.rs  latest_blocks.rs  latest_txs.rs  mod.rs  params.rs  price_chart.rs
src/database/: blocks.rs  chains.rs  common.rs  database.rs  database_tr.rs  evm.rs  evm_polls.rs  heartbeats.rs  mod.rs  params.rs  proposals.rs  transactions.rs  validator.rs  validators.rs
src/ethereum_abi/: abi.rs  event.rs  mod.rs  params.rs  types.rs  values.rs
src/fetch/: account.rs  amount_util.rs  apr.rs  assets.rs  blocks.rs  chain.rs  chains.rs  contract.rs  database_tr.rs  delegations.rs  delegators.rs  evm.rs  evm_socket_handler.rs  heartbeats.rs  mod.rs  others.rs  params.rs  proposals.rs  requests.rs  socket.rs  testdata.rs  tokenomics.rs  transactions.rs  utils.rs  validators.rs
src/fetch/chain_socket/types/: evm.rs  mod.rs  proposal.rs  tx.rs
src/fetch/chains/: celestia.rs  common.rs  evmos.rs  kyve.rs  mod.rs  osmosis.rs  secret.rs
src/fetch/common_chain/: blocks.rs  chain.rs  mod.rs  others.rs  requests.rs  transactions.rs
src/fetch/cosmos_chains/: axelar.rs  chain.rs  common.rs  cosmos.rs  evmos.rs  mod.rs
src/fetch/custom/: mod.rs
src/fetch/custom_chain/: mod.rs
src/fetch/rest/: blocks.rs  delegations.rs  delegators.rs  others.rs  params.rs  proposals.rs  requests.rs  tokenomics.rs  transactions.rs  utils.rs  validators.rs
src/fetch/wss/: mod.rs  new_blocks.rs  others.rs  tx.rs
src/macros/: chain.rs  init_chain.rs  mod.rs
src/read_only_old_in_memory_database/: db.rs  impls.rs  last_ten_blocks.rs  last_ten_txs.rs  mod.rs  params.rs  price_chart.rs
src/routes/: account.rs  api_response.rs  blocks.rs  calculations.rs  chain.rs  chains.rs  common.rs  community_pool.rs  contract.rs  delegations.rs  delegators.rs  evm.rs  heartbeats.rs  mod.rs  params.rs  proposals.rs  signing_info.rs  socket.rs  staking_pool.rs  tokenomics.rs  transactions.rs  validators.rs
src/routes/rest/: blocks.rs  common.rs  community_pool.rs  delegations.rs  delegators.rs  mod.rs  params.rs  proposals.rs  signing_info.rs  staking_pool.rs  tokenomics.rs  transactions.rs  validators.rs
src/routes/wss/: blocks.rs  mod.rs  socket.rs  transactions.rs
src/server/: mod.rs  state.rs  web_server.rs  web_socket.rs
src/server/routes/: mod.rs
src/server/routes/common/rest/: blocks.rs  delegations.rs  delegators.rs  macros.rs  mod.rs  params.rs  proposals.rs  signing_info.rs  staking_pool.rs  tokenomics.rs  transactions.rs  validators.rs
