[package]
name = "explorer-backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.3.1", default-features = false, features = [
    "tokio-runtime",
] }
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
base64 = "0.20.0"
chrono = "0.4.23"
futures = "0.3.25"
futures-core = "0.3.25"
hex = "0.4.3"
pin-project-lite = "0.2.9"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10.6"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tendermint = "0.28.0"
cosmrs = "0.11.0"
serde_yaml = "0.9.16"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-actix-web = "0.7.0"
dotenvy = "0.15.6"
versions = { version = "4.1.0", features = ["serde"] }
bech32 = "0.9.1"
dashmap = "5.4.0"
serde-querystring = "0.1.0"
tracing-appender = "0.2.2"

[build-dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
